centered texts, fixed wrapping, changed font

--- a/style-all.css
+++ b/style-all.css
@@ -57,16 +57,23 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 1%;
-    align-items: center;
+    /* align-items: center; */
 }
 .stats-bubble{
    background-color: rgba(150, 140, 140, 0.568);
-   width: 30%;
-   text-align: center;
-   padding: 8px;
+   width: 33%;
+   /* text-align: center; */
+   /* padding: 8px; */
+   position: relative;
+   white-space: nowrap;
+   /* overflow: hidden; */
 }
 .stats-text{
     margin: auto;
+    position: absolute;
+    top:50%;
+    left:  50%;
+    transform: translate(-50%, -50%);
 }
 .info-container{
     width: 33%;
